--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # 推荐使用代理地址，避免直接调用 OpenAI API
 # See https://github.com/justjavac/chatgpt
-CHATGPT_PROXY_API_BASE_URL="https://closeai.deno.dev/v1"
+CHATGPT_API_BASE_URL="https://closeai.deno.dev/v1"
 
 # 你的 API 密钥
 # See https://platform.openai.com/
