支持酷狗音乐搜索

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,16 +3,10 @@
   "singleQuote": true,
   "arrowParens": "avoid",
   "trailingComma": "all",
-  "importOrder": [
-    "node:*",
-    "<THIRD_PARTY_MODULES>",
-    "^[./]"
-  ],
+  "importOrder": ["node:*", "<THIRD_PARTY_MODULES>", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports"
-  ],
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "overrides": [
     {
       "files": ".prettierrc",
