--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # 推荐使用代理地址，避免直接调用 OpenAI API
-# See https://github.com/justjavac/chatgpt
+# 感谢 justjavac
 CHATGPT_API_BASE_URL="https://closeai.deno.dev/v1"
 
 # 你的 API 密钥
